feat(auth): integrate OTP verification and enable two-step authentication APIs to frontend